Wersja wyświetla znaki, działa

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,15 @@
 .App {
-  font-family: sans-serif;
-  text-align: center;
+    font-family: sans-serif;
+    text-align: center;
+
+
+}
+#first {
+    position: relative;
+    float: left;
+}
+
+#second {
+    position: relative;
+    float: left;
 }
